--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,18 +4,19 @@ body{
 }
 header{
   text-align: center;
-  background-color: antiquewhite;
+  background-color: #FFC857;
   border-radius: 15px;
   margin-top: 10px;
   margin-left: 10px;
   margin-right: 10px;
   padding: 10px;
+  font-style: italic;
 }
 h1{
   margin: 0;
 }
 .container{
-  background-image: url("./assets/background.jpg");
+  background-color: #255F85;
   width: 97.2vw;
   height: 84vh;
   padding: 10px;
@@ -74,6 +75,7 @@ h1{
   text-align: center;
   font-size: medium;
   font-weight: 500;
+    color: white;
 }
 .addButtonContainer{
   cursor: pointer;
@@ -82,7 +84,8 @@ h1{
   align-items: center;
   font-weight: 700;
   font-size: 18px;
-  background-color: rgb(249, 130, 130);
+  background-color: #C5283D;
+  color: white;
   height: 35px;
   width: 40vw;
   padding-bottom: 4px;
@@ -90,7 +93,7 @@ h1{
 }
 .addButtonContainer:hover{
   background-color: white;
-  color: red;
+  color:#C5283D;
 }
 .popupContainer{
   display: flex;
@@ -99,7 +102,7 @@ h1{
   margin-top: -75vh;
   height: 50vh;
   width: 42vw;
-  background-color: rgb(255, 130, 130);
+  background-color: #E06777;
   border-radius: 15px;
   outline: 0;
   box-shadow: 0px 0px 100vh 100vh #00000088;
@@ -109,7 +112,7 @@ h1{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 40px;
   gap: 20px;
 
 }
@@ -136,7 +139,7 @@ h1{
   border-top-right-radius: 15px;
   display: flex;
   flex-direction: row;
-  background-color: rgb(97, 0, 0);
+  background-color: #C5283D;
   color: white;
   justify-content: center;
 
@@ -167,8 +170,9 @@ h1{
   cursor: pointer;
   padding-top: 10px;
   padding-left: 40px;
-  height: 15px;
-  width: 15px;
+  height: 20px;
+  filter: invert()  ;
+  width: 20px;
 }
 .modelButton{
   cursor: pointer;
@@ -180,7 +184,8 @@ h1{
   padding-right: 25px;
   border-radius: 25px;
   font-weight: 600;
-  background-color: rgb(255, 85, 85);
+  background-color: #C5283D;
+  color: white;
   box-shadow: 2px 2px 2px black;
 }
 .modelButton:active{
